tests/duarouter/function/skip_routing/invalid/gaps/errors.duarouter
Error: Edge 'left' not connected to edge 'end' for vehicle 'left_gap'.
Error: Edge 'middle' not connected to edge 'rend' for vehicle 'middle_gap'.
Quitting (on error).
